deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app
  namespace: example
spec:
  selector:
    matchLabels:
      name: nginx-backend
  template:
    metadata:
      labels:
        name: nginx-backend
    spec:
      containers:
        - name: backend
          image: nginx
          ports:
            - containerPort: 80
