service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: example
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    name: nginx-backend
