ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: example
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    # Annotation for middleware redirecting http to https
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  tls:
    - secretName: ${SECRET_NAME}
      hosts:
        - ${HOST}
  rules:
  - host: ${HOST}
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name:  nginx-service
              port:
                number: 80
